--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.0",
-    "expo": "~54.0.18",
+    "expo": "^54.0.27",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
