--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "npx prettier . --write && npx eslint"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.0",
-    "expo": "^54.0.27",
-    "expo-image-picker": "~17.0.8",
-    "expo-location": "~19.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo": "^54.0.3",
+    "expo-image-picker": "~17.0.10",
+    "expo-location": "~19.0.8",
+    "expo-status-bar": "~3.0.9",
     "firebase": "^10.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -29,5 +30,12 @@
     "react-native-web": "^0.21.0"
   },
   "private": true,
-  "overrides": {}
+  "overrides": {},
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "prettier": "3.7.4"
+  }
 }
